<resources>
    <string name="app_name">PlaylistMaker</string>
    <string name="search">Поиск</string>
    <string name="library">Медиатека</string>
    <string name="settings">Настройки</string>
    <string name="stile_theme">Темная тема</string>
    <string name="user_agreement">Пользовательское соглашение</string>
    <string name="share_app">Поделиться приложением</string>
    <string name="contact_support">Написать в поддержку</string>
    <string name="placeholder_screen_search">Заглушка для поиска</string>
    <string name="placeholder_screen_library">Заглушка для медиатеки</string>

    <string name="share_app_text">Ссылка на курс по Android-разработке в Практикуме:
        https://practicum.yandex.ru/android-developer/</string>
    <string name="support_email">timon994@yandex.ru</string>
    <string name="support_subject">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="support_body">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="user_agreement_url">https://yandex.ru/legal/practicum_offer/ru</string>

    <!-- Экран поиска -->
    <string name="search_no_results">Ничего не нашлось</string>
    <string name="connection_error">Проблемы со связью</string>
    <string name="check_internet_connection">Загрузка не удалась. Проверьте подключение к интернету</string>
    <string name="refresh">Обновить</string>

    <!-- Для задания 10 -->
    <string name="stub_track_name">Название трекаааааааааааааааааааааааааааааааааааааааааааааааа</string>
    <string name="stub_artist_name">Имя Артистааааааааааааааааааааааааааааааааааааааааааааааааааа</string>
    <string name="stub_track_time">04:011111111111</string>

    <!-- Для задания 12 -->
    <string name="you_were_looking_for">Вы искали</string>
    <string name="clear_history">Очистить историю</string>

    <!-- Для задания 13 -->
    <string name="label_track_name">Название песни</string>
    <string name="label_artist">Исполнитель</string>
    <string name="label_duration">Длительность</string>
    <string name="label_album">Альбом</string>
    <string name="label_year">Год</string>
    <string name="label_genre">Жанр</string>
    <string name="label_country">Страна</string>

    <string name="library_title">Медиатека</string>
    <string name="playlists_tab">Плейлисты</string>
    <string name="favorites_tab">Избранные треки</string>
    <string name="new_playlist">Новый плейлист</string>
    <string name="no_playlists_message">Вы не создали\nни одного плейлиста</string>
    <string name="no_favorites_message">Ваша медиатека пуста</string>

    <string name="playlist_name_hint">Название*</string>
    <string name="playlist_description_hint">Описание</string>
    <string name="create_button">Создать</string>
    <string name="playlist_created_message">Плейлист %s создан</string>
    <string name="playlist_creation_error">Ошибка при создании плейлиста</string>
    <string name="exit_confirmation_title">Завершить создание плейлиста?</string>
    <string name="exit_confirmation_message">Все несохраненные данные будут потеряны</string>
    <string name="exit_button">Завершить</string>
    <string name="cancel_button">Отмена</string>

    <string name="stub_playlist_name">Название плейлиста222222222222222222222222222222222222222222222222222222222222222222</string>
    <string name="stub_number_of_tracks">0 треков</string>
    <string name="exit_playlist_dialog_title">Завершить создание плейлиста?</string>
    <string name="exit_playlist_dialog_message">Все несохраненные данные будут потеряны</string>
    <string name="exit_playlist_dialog_confirm">Завершить</string>
    <string name="exit_playlist_dialog_cancel">Отмена</string>

    <string name="add_to_playlist">Добавить в плейлист</string>
    <string name="track_added_to_playlist">Добавлено в плейлист «%s»</string>
    <string name="track_already_in_playlist">Трек уже добавлен в плейлист «%s»</string>
    <string name="playlist_created">Плейлист %1$s создан</string>

</resources>