<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="@dimen/dialog_width"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/element_padding_24"
    android:background="@drawable/dialog_background">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/exit_playlist_dialog_title"

        android:textColor="@color/black"
        android:textSize="@dimen/text_size_19"
/>

    <TextView
        android:id="@+id/tvMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/element_margin_12"
        android:text="@string/exit_playlist_dialog_message"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_16"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:layout_marginTop="@dimen/element_margin_24">

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/exit_playlist_dialog_cancel"
            android:textColor="@color/blue"
            android:background="@android:color/transparent"/>

        <Button
            android:id="@+id/btnFinish"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/exit_playlist_dialog_confirm"
            android:textColor="@color/blue"
            android:background="@android:color/transparent"/>

    </LinearLayout>

</LinearLayout>