<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:theme="@style/Theme.PlaylistMaker"
    android:background="?attr/colorPrimary"
    >


    <FrameLayout
        style="@style/LinearLayoutHeader"
        android:layout_width="match_parent"
        android:layout_marginRight="@dimen/screen_edge_indentation"
        android:background="?attr/colorPrimary">

        <TextView
            style="@style/TextViewtHeader"
            android:paddingTop="14dp"
            android:paddingBottom="16dp"
            android:layout_gravity="start"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:background="?attr/colorPrimary"/>
    </FrameLayout>





    <LinearLayout
        style="@style/LinearLayoutContainerPadded"
        android:layout_marginRight="@dimen/screen_edge_indentation"
        android:background="?attr/colorPrimary">

        <Button
            android:id="@+id/search"
            style="@style/ButtonMain"
            android:layout_marginTop="@dimen/indentation_from_title"
            app:icon="@drawable/ic_search_light_mode"
            android:text="@string/search"/>

        <Button
            android:id="@+id/library"
            style="@style/ButtonMain"
            android:layout_marginTop="@dimen/distance_between_bottom"
            android:layout_marginBottom="@dimen/distance_between_bottom"
            app:icon="@drawable/ic_library_light_mode_24"
            android:text="@string/library"/>

        <Button
            android:id="@+id/tools"
            style="@style/ButtonMain"
            android:layout_marginBottom="@dimen/distance_between_bottom"
            app:icon="@drawable/ic_setting_light_mode_24"
            android:text="@string/settings"/>
    </LinearLayout>

</LinearLayout>




