<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main_setting"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:theme="@style/Theme.PlaylistMaker">>

    <LinearLayout
        style="@style/LinearLayoutHeader"
        android:paddingTop="14dp"
        android:paddingBottom="24dp">

        <Button
            android:id="@+id/back"
            style="@style/ButtonBack"
            android:layout_width="48dp"
            android:layout_height="wrap_content"
            app:backgroundTint="@color/black"
            app:icon="@drawable/ic_arrow_back_24"
            app:iconGravity="textStart"
            app:iconPadding="16dp" />

        <TextView
            style="@style/TextViewtHeader"
            android:gravity="center"
            android:text="@string/settings" />
    </LinearLayout>

    <LinearLayout style="@style/LinearLayoutContainerPadded">


        <Switch
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:paddingVertical="@dimen/distance_between_bottom_2"
            android:paddingRight="15dp"
            android:text="@string/stily_theme"
            android:textColor="?attr/colorOnSurface"
            android:textSize="@dimen/text_size_setting_activity" />

        <TextView
            android:id="@+id/share"
            style="@style/TextViewSettingItem"
            android:text="@string/share_app"
            app:drawableEndCompat="@drawable/ic_share_light_mode" />

        <TextView
            android:id="@+id/write_support"
            style="@style/TextViewSettingItem"
            android:text="@string/contact_support"
            app:drawableEndCompat="@drawable/ic_support_light_mode_24" />

        <TextView
            android:id="@+id/user_agreement"
            style="@style/TextViewSettingItem"
            android:text="@string/user_agreement"
            app:drawableEndCompat="@drawable/ic_arrow_forward_light_mode_24" />

    </LinearLayout>


</LinearLayout>
