<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/main_search"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="?attr/colorSurface"
        android:theme="@style/Theme.PlaylistMaker">

    <LinearLayout
        style="@style/LinearLayoutHeader">
        <TextView
            style="@style/TextViewtHeader"
            android:text="@string/search" />
    </LinearLayout>

      <LinearLayout
        android:id="@+id/search_field_container"
        style="@style/LinearLayoutContainerPadded"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:radius="@dimen/radius_size_8"
        android:background="@drawable/ic_search_field_background" >

          <EditText
              android:id="@+id/search_edit_text"
              style="@style/searchBarText"
              android:drawableStart="@drawable/ic_search_bar_16"
              android:hint="@string/search"
              android:inputType="text"
              android:maxLines="1"
              android:textCursorDrawable="@drawable/ic_cursor"
              />

          <ImageView
              android:id="@+id/clear_button"
              style="@style/clearButton"
              android:src="@drawable/ic_search_clean_16"
              android:visibility="gone" />
    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view_track"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/element_margin_16"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="44dp"
            android:layout_height="44dp"
            android:indeterminateTint="@color/blue_progress_bar"
            android:visibility="gone"
            tools:visibility="visible"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintVertical_bias="0.3"/>


        <LinearLayout
            android:id="@+id/search_history"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:visibility="gone"
            tools:visibility="visible">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="@dimen/layout_height_52"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/element_margin_24"
                android:fontFamily="@font/ys_display_medium"
                android:gravity="center"
                android:text="@string/you_were_looking_for"
                android:textColor="?attr/colorOnSurface"
                android:textSize="@dimen/text_size_19" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_view_history"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />


                <Button
                    android:id="@+id/clear_button_history"
                    style="@style/clearButtonHistory"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:layout_gravity="center_horizontal"
                    android:gravity="center"
                    android:fontFamily="@font/ys_display_medium"
                    android:textSize="@dimen/text_size_14"
                    android:text="@string/clear_history" />

        </LinearLayout>




        <LinearLayout
            android:id="@+id/placeholder_nothing_found"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:visibility="gone" >

            <!-- ЗАГЛУШКА: НИЧЕГО НЕ НАЙДЕНО -->
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/ic_placeholder_track_error" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/element_margin_16"
                android:fontFamily="@font/ys_display_medium"
                android:text="@string/search_no_results"
                android:textSize="@dimen/text_size_19"
                android:textColor="?attr/colorOnSurface"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/placeholder_network_error"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:layout_marginStart="@dimen/element_margin_24"
            android:layout_marginEnd="@dimen/element_margin_24"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:visibility="gone"
            tools:visibility="invisible">

            <!-- ЗАГЛУШКА: ОШИБКА СЕТИ  -->
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/ic_placeholder_no_results"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/element_margin_16"
                android:layout_gravity="center"
                android:fontFamily="@font/ys_display_medium"
                android:text="@string/connection_error"
                android:textSize="@dimen/text_size_19"
                android:textColor="?attr/colorOnSurface"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/element_margin_16"
                android:layout_gravity="center"
                android:textAlignment="center"
                android:fontFamily="@font/ys_display_medium"
                android:text="@string/check_internet_connection"
                android:textSize="@dimen/text_size_19"
                android:textColor="?attr/colorOnSurface"/>

            <Button
                android:id="@+id/refresh_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/element_margin_24"
                android:text="@string/refresh"
                android:textAllCaps="false"
                android:fontFamily="@font/ys_display_medium"
                android:textSize="@dimen/text_size_14"
                android:textColor="?attr/colorSurface"
                android:backgroundTint="?attr/colorOnSurface"
                app:cornerRadius="@dimen/radius_size_54"
                />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>


</LinearLayout>