<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:theme="@style/Theme.PlaylistMaker"
    android:layout_marginStart="@dimen/element_margin_13"
    android:layout_marginEnd="@dimen/element_margin_12">

    <ImageView
        android:id="@+id/CoverTack"
        android:layout_width="@dimen/track_cover_margin_size"
        android:layout_height="@dimen/track_cover_margin_size"
        android:layout_marginTop="@dimen/element_margin_8"
        android:layout_marginBottom="@dimen/element_margin_8"
        android:scaleType="centerCrop" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical"
        android:layout_marginStart="@dimen/element_margin_8"
        android:layout_marginEnd="@dimen/element_margin_8"
        android:layout_marginTop="@dimen/element_margin_16"
        android:layout_marginBottom="@dimen/element_margin_16"
        android:gravity="center_vertical">

        <TextView
            android:id="@+id/TrackName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/element_margin_1"
            android:textSize="@dimen/text_size_normal"
            android:fontFamily="@font/ys_display_regular"
            android:maxLines="1"
            android:textColor="?attr/colorOnSurface"
            android:singleLine="true"
            android:ellipsize="end"
            tools:text="@string/stub_track_name"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <TextView
                android:id="@+id/ArtistName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="@dimen/text_size_artist_name"
                android:fontFamily="@font/ys_display_regular"
                android:textColor="?attr/colorOnSurfaceVariant"
                android:maxLines="1"
                android:ellipsize="end"
                android:singleLine="true"
                tools:text="@string/stub_artist_name"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_dot_13"
                app:tint="?attr/colorOnSurfaceVariant"/>

            <TextView
                android:id="@+id/TrackTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size_artist_name"
                android:fontFamily="@font/ys_display_regular"
                android:textColor="?attr/colorOnSurfaceVariant"
                tools:text="@string/stub_track_time"/>
        </LinearLayout>

    </LinearLayout>

    <ImageView
        android:id="@+id/TrackSelectionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_arrow_forward_light_mode_24"
        android:layout_gravity="center_vertical"
        app:tint="?attr/colorOnSurfaceVariant"/>

</LinearLayout>